framework/src/java/aorta/parser/AORTAParser.java
// Generated from C:\Dropbox\code\phd\aorta\framework\src\java\aorta\parser\AORTA.g4 by ANTLR 4.1
package aorta.parser;

import alice.tuprolog.Number;
import alice.tuprolog.Int;
import alice.tuprolog.Struct;
import alice.tuprolog.Prolog;
import alice.tuprolog.Term;
import alice.tuprolog.Theory;
import alice.tuprolog.Var;

import aorta.kr.*;
import aorta.kr.language.*;
import aorta.parser.helper.*;
import aorta.reasoning.*;
import aorta.reasoning.action.*;
import aorta.reasoning.fml.*;

import java.io.IOException;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AORTAParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, START_BLOCK=2, END_BLOCK=3, START_BRACKET=4, END_BRACKET=5, EXECUTE=6, 
		INIT_BLOCK=7, ORGANIZATION=8, PATH=9, TYPE=10, ORGANIZATION_TYPE=11, STRATEGY=12, 
		OPT_BLOCK=13, ACT_BLOCK=14, COORDINATION_BLOCK=15, EQUALS=16, START=17, 
		END=18, COMMA=19, COLON=20, SEMICOLON=21, NOT=22, FULLSTOP=23, PIPE=24, 
		ROLE=25, OBJ=26, TELL=27, ACHIEVE=28, OPT=29, BEL=30, GOAL=31, ORG=32, 
		CONSIDER=33, DISREGARD=34, ENACT=35, DEACT=36, COMMIT=37, SEND=38, DROP=39, 
		TRUE=40, ATOM=41, NUMBER=42, VAR=43, MATH_OP=44, BINARY_OP=45, UNARY_OP=46, 
		CLASSNAME=47, FILEPATH=48, COMMENT=49, WS=50;
	public static final String[] tokenNames = {
		"<INVALID>", "' is '", "'{'", "'}'", "'['", "']'", "'=>'", "'init'", "'organization'", 
		"'path'", "'type'", "ORGANIZATION_TYPE", "'strategy'", "'options'", "'actions'", 
		"'coordination'", "'='", "'('", "')'", "','", "':'", "';'", "'~'", "'.'", 
		"'|'", "'role'", "'obj'", "'tell'", "'achieve'", "'opt'", "'bel'", "'goal'", 
		"'org'", "'consider'", "'disregard'", "'enact'", "'deact'", "'commit'", 
		"'send'", "'drop'", "'true'", "ATOM", "NUMBER", "VAR", "MATH_OP", "BINARY_OP", 
		"'\\+'", "CLASSNAME", "FILEPATH", "COMMENT", "WS"
	};
	public static final int
		RULE_aortaAgent = 0, RULE_actionRules = 1, RULE_acts = 2, RULE_act = 3, 
		RULE_option = 4, RULE_illForce = 5, RULE_formulas = 6, RULE_formula = 7, 
		RULE_action = 8, RULE_prolog = 9, RULE_prolog2 = 10, RULE_termBuilder = 11, 
		RULE_term = 12, RULE_atom = 13, RULE_number = 14, RULE_var = 15, RULE_struct = 16, 
		RULE_args = 17, RULE_list = 18, RULE_listContents = 19, RULE_listItem = 20;
	public static final String[] ruleNames = {
		"aortaAgent", "actionRules", "acts", "act", "option", "illForce", "formulas", 
		"formula", "action", "prolog", "prolog2", "termBuilder", "term", "atom", 
		"number", "var", "struct", "args", "list", "listContents", "listItem"
	};

	@Override
	public String getGrammarFileName() { return "AORTA.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public AORTAParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class AortaAgentContext extends ParserRuleContext {
		public String name;
		public AgentBuilder agent;
		public ActionRulesContext actionRules;
		public TerminalNode EOF() { return getToken(AORTAParser.EOF, 0); }
		public ActionRulesContext actionRules() {
			return getRuleContext(ActionRulesContext.class,0);
		}
		public AortaAgentContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public AortaAgentContext(ParserRuleContext parent, int invokingState, String name) {
			super(parent, invokingState);
			this.name = name;
		}
		@Override public int getRuleIndex() { return RULE_aortaAgent; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AORTAListener ) ((AORTAListener)listener).enterAortaAgent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AORTAListener ) ((AORTAListener)listener).exitAortaAgent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AORTAVisitor ) return ((AORTAVisitor<? extends T>)visitor).visitAortaAgent(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AortaAgentContext aortaAgent(String name) throws RecognitionException {
		AortaAgentContext _localctx = new AortaAgentContext(_ctx, getState(), name);
		enterRule(_localctx, 0, RULE_aortaAgent);
		try {
			enterOuterAlt(_localctx, 1);
			{

				   Initialization init = new Initialization();
				   List<ActionRule> actRules = new ArrayList<>();
				   
			{
			setState(43); ((AortaAgentContext)_localctx).actionRules = actionRules();
			actRules = ((AortaAgentContext)_localctx).actionRules.rules;
			}
			setState(46); match(EOF);

				 
				 ((AortaAgentContext)_localctx).agent =  new AgentBuilder(name, init, actRules);  
				 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActionRulesContext extends ParserRuleContext {
		public List<ActionRule> rules;
		public ActsContext acts;
		public ActsContext acts() {
			return getRuleContext(ActsContext.class,0);
		}
		public ActionRulesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_actionRules; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AORTAListener ) ((AORTAListener)listener).enterActionRules(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AORTAListener ) ((AORTAListener)listener).exitActionRules(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AORTAVisitor ) return ((AORTAVisitor<? extends T>)visitor).visitActionRules(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ActionRulesContext actionRules() throws RecognitionException {
		ActionRulesContext _localctx = new ActionRulesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_actionRules);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49); ((ActionRulesContext)_localctx).acts = acts();
			 ((ActionRulesContext)_localctx).rules =  ((ActionRulesContext)_localctx).acts.rules; 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActsContext extends ParserRuleContext {
		public List<ActionRule> rules;
		public ActContext act;
		public ActsContext a;
		public ActsContext acts() {
			return getRuleContext(ActsContext.class,0);
		}
		public ActContext act() {
			return getRuleContext(ActContext.class,0);
		}
		public ActsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_acts; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AORTAListener ) ((AORTAListener)listener).enterActs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AORTAListener ) ((AORTAListener)listener).exitActs(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AORTAVisitor ) return ((AORTAVisitor<? extends T>)visitor).visitActs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ActsContext acts() throws RecognitionException {
		ActsContext _localctx = new ActsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_acts);
		try {
			enterOuterAlt(_localctx, 1);
			{
			 ((ActsContext)_localctx).rules =  new ArrayList<>(); 
			setState(60);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(53); ((ActsContext)_localctx).act = act();
				 _localctx.rules.add(((ActsContext)_localctx).act.rule); 
				}
				break;

			case 2:
				{
				setState(56); ((ActsContext)_localctx).act = act();
				setState(57); ((ActsContext)_localctx).a = acts();
				 _localctx.rules.add(((ActsContext)_localctx).act.rule); _localctx.rules.addAll(((ActsContext)_localctx).a.rules); 
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActContext extends ParserRuleContext {
		public ActionRule rule;
		public OptionContext option;
		public FormulasContext formulas;
		public ActionContext action;
		public TerminalNode EXECUTE() { return getToken(AORTAParser.EXECUTE, 0); }
		public OptionContext option() {
			return getRuleContext(OptionContext.class,0);
		}
		public TerminalNode FULLSTOP() { return getToken(AORTAParser.FULLSTOP, 0); }
		public ActionContext action() {
			return getRuleContext(ActionContext.class,0);
		}
		public FormulasContext formulas() {
			return getRuleContext(FormulasContext.class,0);
		}
		public TerminalNode COLON() { return getToken(AORTAParser.COLON, 0); }
		public ActContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_act; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AORTAListener ) ((AORTAListener)listener).enterAct(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AORTAListener ) ((AORTAListener)listener).exitAct(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AORTAVisitor ) return ((AORTAVisitor<? extends T>)visitor).visitAct(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ActContext act() throws RecognitionException {
		ActContext _localctx = new ActContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_act);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62); ((ActContext)_localctx).option = option();
			setState(63); match(COLON);
			setState(64); ((ActContext)_localctx).formulas = formulas();
			setState(65); match(EXECUTE);
			setState(66); ((ActContext)_localctx).action = action();
			setState(67); match(FULLSTOP);
			 ((ActContext)_localctx).rule =  new ActionRule(((ActContext)_localctx).option.fml, ((ActContext)_localctx).formulas.fml, ((ActContext)_localctx).action.aa); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OptionContext extends ParserRuleContext {
		public Term fml;
		public TermContext term;
		public TermContext t1;
		public IllForceContext illForce;
		public TermContext t2;
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TerminalNode START() { return getToken(AORTAParser.START, 0); }
		public List<TerminalNode> COMMA() { return getTokens(AORTAParser.COMMA); }
		public TerminalNode SEND() { return getToken(AORTAParser.SEND, 0); }
		public TerminalNode OBJ() { return getToken(AORTAParser.OBJ, 0); }
		public TerminalNode NOT() { return getToken(AORTAParser.NOT, 0); }
		public IllForceContext illForce() {
			return getRuleContext(IllForceContext.class,0);
		}
		public TerminalNode ROLE() { return getToken(AORTAParser.ROLE, 0); }
		public TerminalNode COMMA(int i) {
			return getToken(AORTAParser.COMMA, i);
		}
		public TerminalNode END() { return getToken(AORTAParser.END, 0); }
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public OptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_option; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AORTAListener ) ((AORTAListener)listener).enterOption(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AORTAListener ) ((AORTAListener)listener).exitOption(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AORTAVisitor ) return ((AORTAVisitor<? extends T>)visitor).visitOption(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OptionContext option() throws RecognitionException {
		OptionContext _localctx = new OptionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_option);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			boolean pos = true;
			setState(101);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(73);
				_la = _input.LA(1);
				if (_la==NOT) {
					{
					setState(71); match(NOT);
					pos=false;
					}
				}

				setState(75); match(ROLE);
				setState(76); match(START);
				setState(77); ((OptionContext)_localctx).term = term();
				setState(78); match(END);
				 ((OptionContext)_localctx).fml =  new Struct("role", ((OptionContext)_localctx).term.fml); if (!pos) { ((OptionContext)_localctx).fml =  new Struct("~", _localctx.fml); } 
				}
				break;

			case 2:
				{
				setState(83);
				_la = _input.LA(1);
				if (_la==NOT) {
					{
					setState(81); match(NOT);
					pos=false;
					}
				}

				setState(85); match(OBJ);
				setState(86); match(START);
				setState(87); ((OptionContext)_localctx).term = term();
				setState(88); match(END);
				 ((OptionContext)_localctx).fml =  new Struct("obj", ((OptionContext)_localctx).term.fml); if (!pos) { ((OptionContext)_localctx).fml =  new Struct("~", _localctx.fml); } 
				}
				break;

			case 3:
				{
				setState(91); match(SEND);
				setState(92); match(START);
				setState(93); ((OptionContext)_localctx).t1 = ((OptionContext)_localctx).term = term();
				setState(94); match(COMMA);
				setState(95); ((OptionContext)_localctx).illForce = illForce();
				setState(96); match(COMMA);
				setState(97); ((OptionContext)_localctx).t2 = ((OptionContext)_localctx).term = term();
				setState(98); match(END);
				 ((OptionContext)_localctx).fml =  new Struct("send", ((OptionContext)_localctx).t1.fml, ((OptionContext)_localctx).illForce.fml, ((OptionContext)_localctx).t2.fml); 
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IllForceContext extends ParserRuleContext {
		public Term fml;
		public TerminalNode ACHIEVE() { return getToken(AORTAParser.ACHIEVE, 0); }
		public TerminalNode TELL() { return getToken(AORTAParser.TELL, 0); }
		public IllForceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_illForce; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AORTAListener ) ((AORTAListener)listener).enterIllForce(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AORTAListener ) ((AORTAListener)listener).exitIllForce(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AORTAVisitor ) return ((AORTAVisitor<? extends T>)visitor).visitIllForce(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IllForceContext illForce() throws RecognitionException {
		IllForceContext _localctx = new IllForceContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_illForce);
		try {
			setState(107);
			switch (_input.LA(1)) {
			case TELL:
				enterOuterAlt(_localctx, 1);
				{
				setState(103); match(TELL);
				 ((IllForceContext)_localctx).fml =  new Struct("tell"); 
				}
				break;
			case ACHIEVE:
				enterOuterAlt(_localctx, 2);
				{
				setState(105); match(ACHIEVE);
				 ((IllForceContext)_localctx).fml =  new Struct("achieve"); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FormulasContext extends ParserRuleContext {
		public Formula fml;
		public FormulaContext formula;
		public FormulasContext fmls;
		public FormulaContext formula() {
			return getRuleContext(FormulaContext.class,0);
		}
		public TerminalNode START() { return getToken(AORTAParser.START, 0); }
		public TerminalNode TRUE() { return getToken(AORTAParser.TRUE, 0); }
		public TerminalNode COMMA() { return getToken(AORTAParser.COMMA, 0); }
		public TerminalNode NOT() { return getToken(AORTAParser.NOT, 0); }
		public FormulasContext formulas() {
			return getRuleContext(FormulasContext.class,0);
		}
		public TerminalNode END() { return getToken(AORTAParser.END, 0); }
		public FormulasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formulas; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AORTAListener ) ((AORTAListener)listener).enterFormulas(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AORTAListener ) ((AORTAListener)listener).exitFormulas(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AORTAVisitor ) return ((AORTAVisitor<? extends T>)visitor).visitFormulas(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FormulasContext formulas() throws RecognitionException {
		FormulasContext _localctx = new FormulasContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_formulas);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(109); ((FormulasContext)_localctx).formula = formula();
				 ((FormulasContext)_localctx).fml =  ((FormulasContext)_localctx).formula.fml; 
				}
				break;

			case 2:
				{
				setState(112); match(TRUE);
				 ((FormulasContext)_localctx).fml =  new TrueFormula(); 
				}
				break;

			case 3:
				{
				setState(114); ((FormulasContext)_localctx).formula = formula();
				setState(115); match(COMMA);
				setState(116); ((FormulasContext)_localctx).fmls = formulas();
				 ((FormulasContext)_localctx).fml =  new ConjunctFormula(((FormulasContext)_localctx).formula.fml, ((FormulasContext)_localctx).fmls.fml); 
				}
				break;

			case 4:
				{
				setState(119); match(NOT);
				setState(120); ((FormulasContext)_localctx).formula = formula();
				 ((FormulasContext)_localctx).fml =  new NegatedFormula(((FormulasContext)_localctx).formula.fml); 
				}
				break;

			case 5:
				{
				setState(123); match(NOT);
				setState(124); ((FormulasContext)_localctx).formula = formula();
				setState(125); match(COMMA);
				setState(126); ((FormulasContext)_localctx).fmls = formulas();
				 ((FormulasContext)_localctx).fml =  new ConjunctFormula(new NegatedFormula(((FormulasContext)_localctx).formula.fml), ((FormulasContext)_localctx).fmls.fml); 
				}
				break;

			case 6:
				{
				setState(129); match(NOT);
				setState(130); match(START);
				setState(131); ((FormulasContext)_localctx).fmls = formulas();
				setState(132); match(END);
				 ((FormulasContext)_localctx).fml =  new NegatedFormula(((FormulasContext)_localctx).fmls.fml); 
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FormulaContext extends ParserRuleContext {
		public ReasoningFormula fml;
		public PrologContext prolog;
		public TerminalNode GOAL() { return getToken(AORTAParser.GOAL, 0); }
		public TerminalNode OPT() { return getToken(AORTAParser.OPT, 0); }
		public TerminalNode START() { return getToken(AORTAParser.START, 0); }
		public TerminalNode BEL() { return getToken(AORTAParser.BEL, 0); }
		public PrologContext prolog() {
			return getRuleContext(PrologContext.class,0);
		}
		public TerminalNode ORG() { return getToken(AORTAParser.ORG, 0); }
		public TerminalNode END() { return getToken(AORTAParser.END, 0); }
		public FormulaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formula; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AORTAListener ) ((AORTAListener)listener).enterFormula(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AORTAListener ) ((AORTAListener)listener).exitFormula(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AORTAVisitor ) return ((AORTAVisitor<? extends T>)visitor).visitFormula(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FormulaContext formula() throws RecognitionException {
		FormulaContext _localctx = new FormulaContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_formula);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(161);
			switch (_input.LA(1)) {
			case OPT:
				{
				setState(137); match(OPT);
				setState(138); match(START);
				setState(139); ((FormulaContext)_localctx).prolog = prolog();
				setState(140); match(END);
				 ((FormulaContext)_localctx).fml =  new OptionFormula(((FormulaContext)_localctx).prolog.fml); 
				}
				break;
			case BEL:
				{
				setState(143); match(BEL);
				setState(144); match(START);
				setState(145); ((FormulaContext)_localctx).prolog = prolog();
				setState(146); match(END);
				 ((FormulaContext)_localctx).fml =  new BeliefFormula(((FormulaContext)_localctx).prolog.fml); 
				}
				break;
			case GOAL:
				{
				setState(149); match(GOAL);
				setState(150); match(START);
				setState(151); ((FormulaContext)_localctx).prolog = prolog();
				setState(152); match(END);
				 ((FormulaContext)_localctx).fml =  new GoalFormula(((FormulaContext)_localctx).prolog.fml); 
				}
				break;
			case ORG:
				{
				setState(155); match(ORG);
				setState(156); match(START);
				setState(157); ((FormulaContext)_localctx).prolog = prolog();
				setState(158); match(END);
				 ((FormulaContext)_localctx).fml =  new OrganizationalFormula(((FormulaContext)_localctx).prolog.fml); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
